--- a/.htaccess
+++ b/.htaccess
@@ -37,7 +37,10 @@ Content-Security-Policy: default-src 'self'
   Header set X-XSS-Protection "1; mode=block" 
 </IfModule>
 
-
+<filesMatch ".(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf)$">
+    Header set Cache-Control "max-age=84600, public"
+</filesMatch>
+Nginx
 
 # ----------------------------------------------------------------------
 # Better website experience for IE users
